# We-Movie

./: .gitignore  README.md  docker-compose.yml
PythonAiService/: Dockerfile  docker-compose.yml  requirements.txt
PythonAiService/src/: __init__.py  config.py  main.py
PythonAiService/src/ClientPackage/: __init__.py  client.py
SocialCoreService/: SocialCoreService.sln
SocialCoreService/SocialCoreService/: Dockerfile  Program.cs  SocialCoreService.csproj  SocialCoreService.http  appsettings.json
We&Movie/We&Movie/: AppDelegate.swift  Info.plist  SceneDelegate.swift  ViewController.swift
We&Movie/We&Movie.xcodeproj/: project.pbxproj
WeMovieSync/: .env  API_DOCUMENTATION.md  Dockerfile  WeMovieSync.sln  docker-compose.yml
WeMovieSync/SocialMovieCore/: WeMovieSync.API.csproj
WeMovieSync/WeMovieSync.API/: Dockerfile  Program.cs  SocialMovieCore.http  WeMovieSync.API.csproj  WeMovieSync.API.http  appsettings.json
WeMovieSync/WeMovieSync.Application/: JwtSettings.cs  WeMovieSync.Application.csproj
WeMovieSync/WeMovieSync.Core/: WeMovieSync.Core.csproj
WeMovieSync/WeMovieSync.Infrastructure/: WeMovieSync.Infrastructure.csproj
cpp-media-converter/: .ccls  Makefile  main.cpp
cpp-media-converter/src/: MediaConverter.h
cpp-service/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cpp-service  main.cpp
cpp-service/source/domain/models/: Media.hpp  Session.hpp  User.hpp
cpp-service/source/domain/values/: Roles.hpp
cpp-service/src/models/: Media.hpp  Roles.hpp  Session.hpp  User.hpp
cpp-service/tests/: domain_tests.cpp
(+203 files in other folders)
